Added 401 unauthorized error in the swagger response and generated swagger specs.
